<resources>
    <string name="app_name">今日看点</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="subscribe">订阅</string>
    <string name="subscribe_already">已订阅</string>
    <string name="you_may_like">你可能还喜欢</string>
    <string name="issue_end">本刊已经看完了哦!</string>
    <string name="detail">详情</string>
    <string name="my_collection">我的收藏</string>
    <string name="total_classfy">全部分类</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="myfavorite_no_favorite">你还没有收藏任何内容</string>
    <string name="myfavorite_all_pick">全选</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="checkout_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="switch_language">切换语言</string>
    <string name="settings_not_need_update">已经是最新版本了!</string>
    <string name="app_copyright">Copyright 2017 BeijingAngelRing IT. All rights reserved.</string>
    <string name="dialog_positive">确定</string>
    <string name="toast_exit">再按一次退出</string>
    <string name="toast_download_success">下载成功</string>
    <string name="toast_download_fail">下载失败</string>
    <string name="toast_net_error">网络连接失败!</string>
    <string name="toast_copy_link">已复制到粘贴板</string>
    <string name="toast_sd_unavailable">外部存储不可用，请检查sd卡是否正确安装</string>
    <string name="gridimg_no_more">没有更多了</string>
    <string name="gridimg_loading">加载中…</string>
    <string name="no_image">暂无相关图片!</string>
    <string name="more">更多</string>
    <string name="only_cur_img">仅当前图片</string>
    <string name="entire_issue">整期杂志</string>
    <string name="share_weixin">微信好友</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_circle">朋友圈</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_qqzone">QQ空间</string>
    <string name="share_tumblr">Tumblr</string>
    <string name="share_instagram">Instagram</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_pinterest">Pinterest</string>
    <string name="text_guide_1">新内容、新形式</string>
    <string name="update_later">暂不升级</string>
    <string name="update_now">立即更新</string>
    <string name="set_to_the_desktop_success">设为桌面成功</string>
    <string name="set_to_the_desktop_fail">设为桌面失败</string>
    <string name="set_as_wallpaper">设为锁屏</string>
    <string name="set_as_wallpaper_success">设为锁屏成功</string>
    <string name="set_as_wallpaper_fail">设为锁屏失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="dialog_title">提示</string>
    <string name="go_setting">去设置</string>
    <string name="accessibility">权限申请</string>
    <string name="got_it">知道了</string>
    <string name="off_line">看离线</string>
    <string name="network_to_load_more">联网获得更多精彩内容</string>
    <string name="do_not_remind">不在提醒</string>
    <string name="accessSDCard">请在设置-应用-好看-权限管理中，开启存储权限，以正常展示和存储图片</string>
    <string name="access_location_permission">请在设置-应用-好看-权限管理中，开启定位权限，好看将会为您推荐基于位置的精彩内容</string>
    <string name="gongtu">  供图: @ </string>
    <string name="like">喜欢</string>
    <string name="dislike">不喜欢</string>
    <string name="name_id_error">请传入正确的名称和id</string>
    <string name="url_error">请传入正确的url地址</string>
    <string name="collection_img">图片</string>
    <string name="tag">标签</string>
    <string name="collection_cp">供图方</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_complete">清理完成</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="already_lastpage">已经是最后一张了</string>
    <string name="haokan_slogan">每日看点</string>
    <string name="close">关闭</string>
    <string name="refresh">刷新</string>
    <string name="copy_link">复制链接</string>
    <string name="open_with_browse">用浏览器打开</string>
    <string name="mainpage">首页</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    <string name="hotpage">热门</string>
    <string name="magazine">杂志</string>
    <string name="send">发送</string>
    <string name="writefb">期待您的反馈</string>
    <string name="your_mobilephone">您的手机号：</string>
    <string name="your_email">您的邮箱号：</string>
    <string name="email">邮箱</string>
    <string name="your_qq">您的QQ：</string>
    <string name="qq">QQ</string>
    <string name="fb_user_info_end">您的联系方式有助于我们沟通和解决问题，仅工作人员可见</string>
    <string name="other_hint">其他信息，选填，以便我们给您回复</string>
    <string name="info_hint">选填，以便我们给您回复</string>
    <string name="update_contact">更改联系信息</string>
    <string name="save">保存</string>
    <string name="subscribe_updata_count_singleimg">更新了%1$s张单图</string>
    <string name="item_hot_lable_hint">您可以订阅</string>
    <string name="zutu_size">%1$s张</string>
    <string name="like_num">%1$s人喜欢</string>
    <string name="dantu_labey">＃%1$s＃</string>
    <string name="follow">关注</string>
    <string name="already_follow">已关注</string>
    <string name="message">消息</string>
    <string name="preference">我的关注</string>
    <string name="login_show_01">登录后，你的评论将展示头像与昵称</string>
    <string name="edit_profile"><![CDATA[编辑个人资料>]]></string>
    <string name="register_login">注册/登录</string>
    <string name="choose_comment_login">您可以选择登录后评论</string>
    <string name="no_comment_immediately">不，直接评论</string>
    <string name="comments">评论</string>
    <string name="no_comments">还没有评论呢，写一条吧</string>
    <string name="reply">回复</string>
    <string name="login">登录</string>
    <string name="input_number">输入手机号</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_password">输入密码</string>
    <string name="register">注册</string>
    <string name="login_by_third">第三方登录</string>
    <string name="input_u_phone_number">请输入手机号</string>
    <string name="input_verification">请输入验证码</string>
    <string name="obtain_verification_code">重新获取验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="code_has_bean">验证码已发送至 </string>
    <string name="ok">确认</string>
    <string name="accept_text_about">接受短信大约需要 </string>
    <string name="no_message">暂无消息</string>
    <string name="group_comment">本组评论</string>
    <string name="img_comment">该图评论</string>
    <string name="all_comment">全部评论</string>
    <string name="write_reply">写回复</string>
    <string name="write_comment">写评论……</string>
    <string name="send_comment">发评论</string>
    <string name="enter_search_keyword">请输入搜索关键词</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_record">清除记录</string>
    <string name="out_today">今日热搜</string>
    <string name="my_follow">我的关注</string>
    <string name="cancel_already">已取消</string>
    <string name="weixin">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="unbound">未绑定</string>
    <string name="account_bind">账号绑定</string>
    <string name="focus_tags">我关注的标签</string>
    <string name="focus_channel">我关注的频道</string>
    <string name="add_focus_tags">点击添加兴趣标签</string>
    <string name="no_focus">暂无关注</string>
    <string name="hot_tags">热门标签</string>
    <string name="refresh_tags">换一批</string>
    <string name="search_your_like_tags">搜索你喜欢的标签</string>
    <string name="relevant_tags">相关标签</string>
    <string name="no_collection">暂无收藏</string>
    <string name="edit_data">编辑资料</string>
    <string name="click_change_avatar">点击更改头像</string>
    <string name="nickname">昵称：</string>
    <string name="gender">性别</string>
    <string name="gender1">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="anonymous">匿名</string>
    <string name="has_reply_count">已有 %d 条回复 ></string>
    <string name="comment_count">%d 条评论</string>
    <string name="reply_count">%d 条回复</string>
    <string name="simple_date_format">MM月dd日 HH:mm</string>
    <string name="phone_number">手机</string>
    <string name="other">其他</string>
    <string name="log_out">退出登录</string>
    <string name="confirm_exit">确认退出</string>
    <string name="confirm_exit_title">确定要退出登录吗？</string>
    <string name="confirm_exit_content">退出登录,将不能发表评论。</string>
    <string name="remove_the_binding">解除绑定</string>
    <string name="remove_the_binding_title">确定要解除绑定？</string>
    <string name="remove_the_binding_content">解除绑定后，系统将清除该账号下所有内容。</string>
    <string name="enter_correct_verification">请输入正确的验证码</string>
    <string name="no_input_comment">您还没有输入评论内容</string>
    <string name="no_install_weixin">你还没有安装微信</string>
    <string name="no_install_qq">你还没有安装QQ</string>
    <string name="no_install_facebook">你还没有安装 Facebook</string>
    <string name="no_install_twitter">你还没有安装 Twitter</string>
    <string name="no_install_instagram">你还没有安装 Instagram</string>
    <string name="no_install_pinterest">你还没有安装 Pinterest</string>
    <string name="no_install_tumblr">你还没有安装 Tumblr</string>
    <string name="save_success">保存成功</string>
    <string name="no_permission">您没有授予存储权限，会影响您的正常使用!</string>
    <string name="no_permission_photo">您没有授予存储权限，无法设置头像!</string>
    <string name="no_permission_apk">您没有授予存储权限，不能下载新版本!</string>
    <string name="count_find_cp">找不到此CP</string>
    <string name="count_find_tag">找不到此标签</string>
    <string name="count_find_group">找不到此组图</string>
    <string name="fail">失败</string>
    <string name="get_third_information_fail">获取第三方用户信息失败</string>
    <string name="get_third_information_cancel">获取第三方用户信息取消</string>
    <string name="information_upload_failed">用户信息上传失败</string>
    <string name="upload_failed">上传失败</string>
    <string name="log_out_failure">退出登录失败</string>
    <string name="picture_off_line">图片已下架</string>
    <string name="subscribe_success">订阅成功</string>
    <string name="unsubscribe">取消订阅</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="bind_mobile_phone_fail">绑定手机失败</string>
    <string name="bind_mobile_phone_success">绑定手机成功</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="please_enter_correct_verification">请输入正确的验证码</string>
    <string name="update_file_place_try_later">修改失败，请稍候重试</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_fail">绑定失败</string>
    <string name="begin_download_place_later">开始下载，请稍后</string>
    <string name="server_fail">访问服务器失败</string>
    <string name="has_logout">已退出登录</string>
    <string name="place_input_phone_number">请输入正确的手机号码</string>
    <string name="phone_number_not_empty">手机号码不能为空</string>
    <string name="nickname_toolong">昵称过长</string>
    <string name="nickname_empty">-昵称不能为空-</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_format_no">密码格式不正确</string>
    <string name="password_format_long">密码长度必须是6-16位</string>
    <string name="get_verification_success">获取验证码成功</string>
    <string name="validation_fails">验证失败</string>
    <string name="retrieve_password">找回密码</string>
    <string name="click_upload_image">点击上传头像</string>
    <string name="recommended_for_you">为您推荐</string>
    <string name="did_not_find">对不起，没有找到相关内容</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="info_hint_phone">输入您的手机号</string>
    <string name="info_hint_email">输入您的邮箱</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_ago">%s分钟前</string>
    <string name="addcomment_success">评论成功</string>
    <string name="replay_success">回复成功</string>
    <string name="last_page">已经是最后一张</string>
    <string name="skip">跳过 %d</string>
    <string name="personpage">个人</string>
    <string name="selectall">全选</string>
</resources>