<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bg"
        android:background="@color/hei_50"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:background="@color/bai"
        android:id="@+id/content"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="195dp">
        <View
            android:background="#d8d8d8"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/drawable_selector_bai"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <View
            android:id="@id/divider"
            android:background="#d8d8d8"
            android:layout_above="@id/cancel"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_above="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/share_weixin_circle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_pengyouquan"
                android:drawablePadding="10dp"
                android:text="@string/share_circle"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/share_weixin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_sina"
                android:drawablePadding="10dp"
                android:text="@string/share_weixin"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/share_qq"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_qq"
                android:drawablePadding="10dp"
                android:text="@string/share_qq"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/share_sina"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_weibo"
                android:drawablePadding="10dp"
                android:text="@string/share_sina"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/share_qqzone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_qq_zone"
                android:drawablePadding="10dp"
                android:text="@string/share_qqzone"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_above="@id/ll1"
            android:text="分享至:"
            android:textSize="13sp"
            android:textColor="#999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
</RelativeLayout>