<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_h"
        android:background="@color/bai">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_selector_touming_borderless"
            android:scaleType="center"
            android:src="@drawable/icon_back_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_us"
            android:textColor="#333333"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#d8d8d8" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_about_us_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_about_us_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#7f7f7f"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_about_us_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text=""
        android:textColor="#7f7f7f"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/app_copyright"
        android:textColor="#c0c0c0"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_about_us_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_copy_right"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="v2.0"
        android:textColor="#999999"
        android:textSize="14sp" />
</RelativeLayout>