<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/bai">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_selector_touming_borderless"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back_1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="我的收藏"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/edit"
            android:text="@string/edit"
            android:textSize="14sp"
            android:textColor="@color/color_selector_333333"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/drawable_selector_touming_borderless"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#d8d8d8" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyview"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bai">

        <TextView
            android:id="@+id/selectall"
            android:text="@string/selectall"
            android:textSize="14sp"
            android:textColor="#333333"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/drawable_selector_touming_borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/delete"
            android:text="@string/delete"
            android:textSize="14sp"
            android:textColor="#ffb100"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/drawable_selector_touming_borderless"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d8d8d8" />
    </RelativeLayout>

    <include
        android:visibility="gone"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"/>

    <include
        android:visibility="gone"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_nocontent"
        layout="@layout/layout_no_content"/>
</RelativeLayout>