<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:text="@string/personpage"
        android:textColor="#333333"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/bai"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_h"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d8d8d8"
        />

    <LinearLayout
        android:id="@+id/collection"
        android:orientation="horizontal"
        android:background="@drawable/drawable_selector_bai"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/icon_collection"
            android:layout_marginLeft="18dp"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/my_collection"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icon_setting_into"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_marginLeft="15dp"
        />

    <LinearLayout
        android:id="@+id/history"
        android:orientation="horizontal"
        android:background="@drawable/drawable_selector_bai"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/icon_history_record"
            android:layout_marginLeft="18dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            android:padding="2dp"
            android:layout_width="23dp"
            android:layout_height="23dp"/>

        <TextView
            android:text="历史记录"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icon_setting_into"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_marginLeft="15dp"
        />

    <LinearLayout
        android:id="@+id/clearcache"
        android:orientation="horizontal"
        android:background="@drawable/drawable_selector_bai"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/icon_clearcache"
            android:layout_marginLeft="18dp"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/clear_cache"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress"
            android:indeterminate="true"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <TextView
            android:id="@+id/cachesize"
            android:text="100M"
            android:textColor="#c9c9c9"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_marginLeft="15dp"
        />

    <LinearLayout
        android:id="@+id/aboutus"
        android:orientation="horizontal"
        android:background="@drawable/drawable_selector_bai"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/icon_about"
            android:layout_marginLeft="18dp"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/about_us"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icon_setting_into"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_marginLeft="15dp"
        />

    <LinearLayout
        android:id="@+id/hkextra"
        android:visibility="gone"
        android:orientation="horizontal"
        android:background="@drawable/drawable_selector_bai"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/icon_extra"
            android:layout_marginLeft="18dp"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_extra"
            android:text="好看商城"
            android:textColor="#666666"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icon_setting_into"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>